--- a/Hora/hora.html
+++ b/Hora/hora.html
@@ -8,6 +8,9 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="menu">
+        <div class="volver"><img class="flecha1" src="./imagenes/Flecha - Volver.png" alt="Flecha" width="15px" height="15px"><a href="/index.html"><b>Volver</b></a></div>
+        <div class="inicio"><a href="/index.html"><b class="espacio">Inicio</b></a><a href="/Info/info.html"><b>Qué es Comer en BA?</b></a></div>
+    </div>
 </body>
 </html>
