--- a/Barrio/Colegiales/colegiales.html
+++ b/Barrio/Colegiales/colegiales.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="comida.css">
+    <link rel="stylesheet" href="colegiales.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Climate+Crisis&family=Gloock&family=Tilt+Warp&display=swap" rel="stylesheet">
@@ -11,11 +11,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Búsqueda por tipo de comida</title>
+    <title>colegiales</title>
 </head>
 <body>
     <div class="menu">
-        <div class="volver"><img class="flecha1" src="./imagenes/Flecha - Volver.png" alt="Flecha" width="15px" height="15px"><a class="subrayado" href="/index.html"><b id="link">Volver</b></a></div>
+        <div class="volver"><img class="flecha1" src="/Barrio/imagenes/Flecha - Volver.png" alt="Flecha" width="15px" height="15px"><a class="subrayado" href="/index.html"><b id="link">Volver</b></a></div>
         <div class="inicio"><a class="subrayado" href="/index.html"><b class="espacio" id="link">Inicio</b></a><a class="subrayado" href="/Info/info.html"><b id="link">Qué es Comer en BA?</b></a></div>
     </div>
 </body>
