--- a/Barrio/barrio.html
+++ b/Barrio/barrio.html
@@ -11,12 +11,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Búsqueda por barrio</title>
 </head>
 <body>
     <div class="menu">
-        <div class="volver"><img class="flecha1" src="./imagenes/Flecha - Volver.png" alt="Flecha" width="15px" height="15px"><a href="/index.html"><b>Volver</b></a></div>
-        <div class="inicio"><a href="/index.html"><b class="espacio">Inicio</b></a><a href="/Info/info.html"><b>Qué es Comer en BA?</b></a></div>
+        <div class="volver"><img class="flecha1" src="./imagenes/Flecha - Volver.png" alt="Flecha" width="15px" height="15px"><a class="subrayado" href="/index.html"><b id="link">Volver</b></a></div>
+        <div class="inicio"><a class="subrayado" href="/index.html"><b class="espacio" id="link">Inicio</b></a><a class="subrayado" href="/Info/info.html"><b id="link">Qué es Comer en BA?</b></a></div>
+    </div>
+    <div class="titulo"><p>¿ Buscás algo rico y cerca de casa ?</p></div>
+    <div class="fotos">
+        <div class="foto"><img class="tamaño" src="./imagenes/Palermo.jpg" alt="Palermo"><a href="./Palermo/palermo.html"><p class="texto-fotos">Palermo</p></a></div>
+        <div class="foto"><img class="tamaño" src="./imagenes/Colegiales.jpg" alt="Colegiales"><a href="./Colegiales/colegiales.css"><p class="texto-fotos">Colegiales</p></a></div>
+        <div class="foto"><img class="tamaño" src="./imagenes/San Telmo.jpg" alt="San Telmo"><a href="./San Telmo/STelmo.html"><p class="texto-fotos">San Telmo</p></a></div>
+        <div class="foto"><img class="tamaño" src="./imagenes/Cañitas.jpg" alt="Las Cañitas"><a href="./Las Cañitas/cañitas.html"><p class="texto-fotos">Las Cañitas</p></a></div>
+        <div class="foto"><img class="tamaño" src="./imagenes/Nuñez-Belgrano.jpg" alt="Nuñez y Belgrano"><a href="./Nuñez-Belgrano/nuñez-bel.html"><p class="texto-fotos">Nuñez y Belgrano</p></a></div>
     </div>
 </body>
 </html>
