--- a/Info/info.html
+++ b/Info/info.html
@@ -2,12 +2,21 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="info.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Climate+Crisis&family=Gloock&family=Tilt+Warp&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter+Tight&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Qué es Comer en BA</title>
 </head>
 <body>
-    
+    <div class="menu">
+        <div class="volver"><img class="flecha1" src="./imagenes/Flecha - Volver.png" alt="Flecha" width="15px" height="15px"><a class="subrayado" href="/index.html"><b id="link">Volver</b></a></div>
+        <div class="inicio"><a class="subrayado" href="/index.html"><b class="espacio" id="link">Inicio</b></a><a class="subrayado" href="/Info/info.html"><b id="link">Qué es Comer en BA?</b></a></div>
+    </div>
 </body>
 </html>
