--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 </head>
 <body>
     <div class="menu">
-        <div class="volver"><img class="flecha1" src="./imagenes/Flecha - Volver.png" alt="Flecha" width="15px" height="15px"><a href="/index.html"><b>Volver</b></a></div>
-        <div class="inicio"><a href="/index.html"><b class="espacio">Inicio</b></a><a href="/Info/info.html"><b>Qué es Comer en BA?</b></a></div>
+        <div class="volver"><img class="flecha1" src="./imagenes/Flecha - Volver.png" alt="Flecha" width="15px" height="15px"><a class="subrayado" href="/index.html"><b id="link">Volver</b></a></div>
+        <div class="inicio"><a class="subrayado" href="/index.html"><b class="espacio" id="link">Inicio</b></a><a class="subrayado" href="/Info/info.html"><b id="link">Qué es Comer en BA?</b></a></div>
     </div>
     <hr>
     <div class="container">
