--- a/Barrio/barrio.html
+++ b/Barrio/barrio.html
@@ -19,12 +19,12 @@
         <div class="inicio"><a class="subrayado" href="/index.html"><b class="espacio" id="link">Inicio</b></a><a class="subrayado" href="/Info/info.html"><b id="link">Qué es Comer en BA?</b></a></div>
     </div>
     <div class="titulo"><p>¿ Buscás algo rico y cerca de casa ?</p></div>
-    <div class="fotos">
-        <div class="foto"><img class="tamaño" src="./imagenes/Palermo.jpg" alt="Palermo"><a href="./Palermo/palermo.html"><p class="texto-fotos">Palermo</p></a></div>
-        <div class="foto"><img class="tamaño" src="./imagenes/Colegiales.jpg" alt="Colegiales"><a href="./Colegiales/colegiales.css"><p class="texto-fotos">Colegiales</p></a></div>
-        <div class="foto"><img class="tamaño" src="./imagenes/San Telmo.jpg" alt="San Telmo"><a href="./San Telmo/STelmo.html"><p class="texto-fotos">San Telmo</p></a></div>
-        <div class="foto"><img class="tamaño" src="./imagenes/Cañitas.jpg" alt="Las Cañitas"><a href="./Las Cañitas/cañitas.html"><p class="texto-fotos">Las Cañitas</p></a></div>
-        <div class="foto"><img class="tamaño" src="./imagenes/Nuñez-Belgrano.jpg" alt="Nuñez y Belgrano"><a href="./Nuñez-Belgrano/nuñez-bel.html"><p class="texto-fotos">Nuñez y Belgrano</p></a></div>
+    <div class="container">
+        <div class="foto1"><a href="./Palermo/palermo.html"><p class="texto-fotos">PALERMO</p></a></div>
+        <div class="foto2"><a href="./Colegiales/colegiales.html"><p class="texto-fotos">COLEGIALES</p></a></div>
+        <div class="foto3"><a href="./San Telmo/STelmo.html"><p class="texto-fotos">SAN TELMO</p></a></div>
+        <div class="foto4"><a href="./Las Cañitas/cañitas.html"><p class="texto-fotos">LAS CAÑITAS</p></a></div>
+        <div class="foto5"><a href="./Nuñez-Belgrano/nuñez-bel.html"><p class="texto-fotos">NUÑEZ / BELGRANO</p></a></div>
     </div>
 </body>
 </html>
