--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
     </div>
     <hr>
     <div class="fotos">
-        <div class="foto"><img class="imgTabla" src="./imagenes/Comida.JPG" alt="Elegir dónde comer por el tipo de comida"><a href="./Comida/comida.html"><p class="textoFoto">ELEGÍ POR COMIDA</p></a></div>
-        <div class="foto"><img class="imgTabla" src="./imagenes/Barrio.JPG" alt="Elegir dónde comer por el barrio"><a href="./Barrio/barrio.html"><p class="textoFoto">ELEGÍ POR BARRIO</p></a></div>
-        <div class="foto"><img class="imgTabla" src="./imagenes/Hora.JPG" alt="Elegir dónde comer por la hora del día"><a href="./Hora/hora.html"><p class="textoFoto">ELEGÍ POR HORA DEL DÍA</p></a></div>
+        <div class="foto"><img class="img" src="./imagenes/Comida.JPG" alt="Elegir dónde comer por el tipo de comida"><a href="./Comida/comida.html"><p class="textoFoto">ELEGÍ POR COMIDA</p></a></div>
+        <div class="foto"><img class="img" src="./imagenes/Barrio.JPG" alt="Elegir dónde comer por el barrio"><a href="./Barrio/barrio.html"><p class="textoFoto">ELEGÍ POR BARRIO</p></a></div>
+        <div class="foto"><img class="img" src="./imagenes/Hora.JPG" alt="Elegir dónde comer por la hora del día"><a href="./Hora/hora.html"><p class="textoFoto">ELEGÍ POR HORA DEL DÍA</p></a></div>
     </div>
 </body>
 </html>
