--- a/Barrio/barrio.html
+++ b/Barrio/barrio.html
@@ -20,11 +20,11 @@
     </div>
     <div class="titulo"><p>¿ Buscás algo rico y cerca de casa ?</p></div>
     <div class="container">
-        <div class="foto1"><a href="./Palermo/palermo.html"><p class="texto-fotos">PALERMO</p></a></div>
-        <div class="foto2"><a href="./Colegiales/colegiales.html"><p class="texto-fotos">COLEGIALES</p></a></div>
-        <div class="foto3"><a href="./San Telmo/STelmo.html"><p class="texto-fotos">SAN TELMO</p></a></div>
-        <div class="foto4"><a href="./Las Cañitas/cañitas.html"><p class="texto-fotos">LAS CAÑITAS</p></a></div>
-        <div class="foto5"><a href="./Nuñez-Belgrano/nuñez-bel.html"><p class="texto-fotos">NUÑEZ / BELGRANO</p></a></div>
+        <div class="foto"><a class="subrayado" href="./Palermo/palermo.html"><p class="texto-fotos">PALERMO</p></a></div>
+        <div class="foto1"><a class="subrayado" href="./Colegiales/colegiales.html"><p class="texto-fotos">COLEGIALES</p></a></div>
+        <div class="foto2"><a class="subrayado" href="./San Telmo/STelmo.html"><p class="texto-fotos">SAN TELMO</p></a></div>
+        <div class="foto3"><a class="subrayado" href="./Las Cañitas/cañitas.html"><p class="texto-fotos">LAS CAÑITAS</p></a></div>
+        <div class="foto4"><a class="subrayado" href="./Nuñez-Belgrano/nuñez-bel.html"><p class="texto-fotos">NUÑEZ / BELGRANO</p></a></div>
     </div>
 </body>
 </html>
