--- a/Barrio/Nuñez-Belgrano/nuñez-bel.html
+++ b/Barrio/Nuñez-Belgrano/nuñez-bel.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <div class="menu">
-        <div class="volver"><img class="flecha1" src="/Barrio/imagenes/Flecha - Volver.png" alt="Flecha" width="15px" height="15px"><a class="subrayado" href="/index.html"><b id="link">Volver</b></a></div>
+        <div class="volver"><img class="flecha1" src="/Barrio/imagenes/Flecha - Volver.png" alt="Flecha" width="15px" height="15px"><a class="subrayado" href="/Barrio/barrio.html"><b id="link">Volver</b></a></div>
         <div class="inicio"><a class="subrayado" href="/index.html"><b class="espacio" id="link">Inicio</b></a><a class="subrayado" href="/Info/info.html"><b id="link">Qué es Comer en BA?</b></a></div>
     </div>
 </body>
