--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     </div>
     <div class="container">
         <div id="paraTitulo">Comer en BA</div>
-        <div><img class="flecha2" src="./imagenes/Flecha - Título.png" alt="Flecha" width="20px" height="20px"></div>
-        <div id="para1">Encontrá lo que querés comer y en dónde, en Buenos aires, la capital más linda del mundo :)</div>
+        <div><img src="./imagenes/Flecha - Título.png" alt="Flecha" width="20px" height="20px"></div>
+        <div id="para1">Encontrá los mejores lugares para comer en Buenos aires, la ciudad más linda del mundo :)</div>
     </div>
     <hr>
     <div class="fotos">
