separador con bootstrap

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div><img src="./imagenes/Flecha - Título.png" alt="Flecha" width="20px" height="20px"></div>
         <div id="para1">Encontrá los mejores lugares para comer en Buenos aires, la ciudad más linda del mundo :)</div>
     </div>
-    <hr>
+    <div class="border-top"></div>
     <div class="fotos">
         <div class="foto"><img class="img" src="./imagenes/Comida.JPG" alt="Elegir dónde comer por el tipo de comida"><a href="./Comida/comida.html"><p class="textoFoto">ELEGÍ POR COMIDA</p></a></div>
         <div class="foto"><img class="img" src="./imagenes/Barrio.JPG" alt="Elegir dónde comer por el barrio"><a href="./Barrio/barrio.html"><p class="textoFoto">ELEGÍ POR BARRIO</p></a></div>
