--- a/Comida/comida.html
+++ b/Comida/comida.html
@@ -20,14 +20,14 @@
         <div class="volver"><img class="flecha1" src="./imagenes/Flecha - Volver.png" alt="Flecha" width="15px" height="15px"><a class="subrayado" href="/index.html"><b id="link">Volver</b></a></div>
         <div class="inicio"><a class="subrayado" href="/index.html"><b class="espacio" id="link">Inicio</b></a><a class="subrayado" href="/Info/info.html"><b id="link">Qué es Comer en BA?</b></a></div>
     </div>
-    <div class="container">
+    <div class="Comida">
+        <div class="Intro"><b>¿Qué querés comer hoy?</b></div>
         <div class="Buscador">
             <form action="/buscar" method="get">
                 <input type="text" name="q" placeholder="Buscar...">
                 <button type="submit">Buscar</button>
             </form>
         </div>
-        <div class="Comida"></div>
-      </div>
+    </div>
 </body>
 </html>
