--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <title>Comer en BA</title>
 </head>
 <body>
-    <div class="menu">
+    <!-- <div class="menu">
         <div class="inicio"><a class="subrayado" href="/index.html"><b class="espacio" id="link">Inicio</b></a><a class="subrayado" href="/Info/info.html"><b id="link">Qué es Comer en BA?</b></a></div>
     </div>
     <div class="container">
@@ -30,5 +30,18 @@
         <div class="foto"><img class="img" src="./imagenes/Barrio.JPG" alt="Elegir dónde comer por el barrio"><a href="./Barrio/barrio.html"><p class="textoFoto">ELEGÍ POR BARRIO</p></a></div>
         <div class="foto"><img class="img" src="./imagenes/Hora.JPG" alt="Elegir dónde comer por la hora del día"><a href="./Hora/hora.html"><p class="textoFoto">ELEGÍ POR HORA DEL DÍA</p></a></div>
     </div>
+-->
+<div class="container">
+    <div class="Menú">
+        <div class="inicio"><a class="subrayado" href="/index.html"><b class="espacio" id="link">Inicio</b></a><a class="subrayado" href="/Info/info.html"><b id="link">Qué es Comer en BA?</b></a></div>
+    </div>
+    <div class="Contenido">
+      <div class="Desayuno"></div>
+      <div class="Almuerzo"></div>
+      <div class="Tarde"></div>
+      <div class="Noche"></div>
+    </div>
+    <div class="Título"></div>
+  </div>
 </body>
 </html>
