--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,9 +14,22 @@
     <title>Comer en BA</title>
 </head>
 <body>
-    <!-- <div class="menu">
-        <div class="inicio"><a class="subrayado" href="/index.html"><b class="espacio" id="link">Inicio</b></a><a class="subrayado" href="/Info/info.html"><b id="link">Qué es Comer en BA?</b></a></div>
+    <div class="container">
+        <div class="Menú">
+            <a class="estilo1" href="/index.html"><b id="link">Inicio</b></a>
+            <a class="estilo2" href="/Info/info.html"><b id="link">Qué es Comer en BA?</b></a>
+        </div>
+        <div class="Contenido">
+        <div class="Desayuno"></div>
+        <div class="Almuerzo"></div>
+        <div class="Tarde"></div>
+        <div class="Noche"></div>
+        </div>
+        <div class="Título"></div>
     </div>
+</body>
+</html>
+<!--
     <div class="container">
         <div id="paraTitulo">Comer en BA</div>
         <div><img src="./imagenes/Flecha - Título.png" alt="Flecha" width="20px" height="20px"></div>
@@ -31,17 +42,3 @@
         <div class="foto"><img class="img" src="./imagenes/Hora.JPG" alt="Elegir dónde comer por la hora del día"><a href="./Hora/hora.html"><p class="textoFoto">ELEGÍ POR HORA DEL DÍA</p></a></div>
     </div>
 -->
-<div class="container">
-    <div class="Menú">
-        <div class="inicio"><a class="subrayado" href="/index.html"><b class="espacio" id="link">Inicio</b></a><a class="subrayado" href="/Info/info.html"><b id="link">Qué es Comer en BA?</b></a></div>
-    </div>
-    <div class="Contenido">
-      <div class="Desayuno"></div>
-      <div class="Almuerzo"></div>
-      <div class="Tarde"></div>
-      <div class="Noche"></div>
-    </div>
-    <div class="Título"></div>
-  </div>
-</body>
-</html>
