--- a/index.html
+++ b/index.html
@@ -20,8 +20,13 @@
 <body>
     <div class="container-fluid">
         <div class="Menú">
-            <a class="estilo1" href="/index.html"><b id="link">Inicio</b></a>
-            <a class="estilo2" href="/Info/info.html"><b id="link">Qué es Comer en BA?</b></a>
+            <a class="estilo" href="/index.html"><b id="link">Inicio</b></a>
+            <a class="estilo" href="/Info/info.html"><b id="link">Qué es Comer en BA?</b></a>
+        </div>
+        <div class="Título">
+            <div id="título">Comer en BA</div>
+            <div><img src="./imagenes/Flecha - Título.png" alt="Flecha" width="20px" height="20px"></div>
+            <div id="texto-título">Encontrá los mejores lugares para comer en Buenos aires, la ciudad más linda del mundo :)</div>
         </div>
         <div class="Contenido">
         <div class="Desayuno"></div>
@@ -29,7 +34,6 @@
         <div class="Tarde"></div>
         <div class="Noche"></div>
         </div>
-        <div class="Título"></div>
     </div>
 </body>
 </html>
