--- a/index.html
+++ b/index.html
@@ -8,10 +8,8 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Climate+Crisis&family=Gloock&family=Tilt+Warp&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter+Tight&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,14 +17,13 @@
 </head>
 <body>
     <div class="container-fluid">
-        <div class="Menú">
+        <div class="Menú sticky-top">
             <a class="estilo" href="/index.html"><b id="link">Inicio</b></a>
             <a class="estilo" href="/Info/info.html"><b id="link">Qué es Comer en BA?</b></a>
         </div>
         <div class="Título">
             <div id="título">Comer en BA</div>
-            <div><img src="./imagenes/Flecha - Título.png" alt="Flecha" width="20px" height="20px"></div>
-            <div id="texto-título">Encontrá los mejores lugares para comer en Buenos aires, la ciudad más linda del mundo :)</div>
+            <div id="texto-título">Porque comer rico hace bien al alma :)</div>
         </div>
         <div class="Contenido">
         <div class="Desayuno"></div>
