--- a/index.html
+++ b/index.html
@@ -26,10 +26,12 @@
             <div id="texto-título">Porque comer rico hace bien al alma :)</div>
         </div>
         <div class="Contenido">
-        <div class="Desayuno"></div>
-        <div class="Almuerzo"></div>
-        <div class="Tarde"></div>
-        <div class="Noche"></div>
+            <div class="Cafe"></div>
+            <div class="Hamburguesas"></div>
+            <div class="BBB"></div>
+            <div class="Especial"></div>
+            <div class="Bares"></div>
+            <div class="Mapa"></div>
         </div>
     </div>
 </body>
