--- a/index.html
+++ b/index.html
@@ -26,12 +26,10 @@
             <div id="texto-título">Porque comer rico hace bien al alma :)</div>
         </div>
         <div class="Contenido">
-            <div class="Cafe"></div>
-            <div class="Veggie"></div>
-            <div class="BBB"></div>
-            <div class="Especial"></div>
-            <div class="Bares"></div>
-            <div class="Mapa"></div>
+        <div class="Desayuno"></div>
+        <div class="Almuerzo"></div>
+        <div class="Tarde"></div>
+        <div class="Noche"></div>
         </div>
     </div>
 </body>
