--- a/index.html
+++ b/index.html
@@ -1,40 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!-- Links Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
-    <!-- Links Bootstrap -->
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=DM+Sans&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Climate+Crisis&family=Gloock&family=Tilt+Warp&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter+Tight&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Comer en BA</title>
 </head>
 <body>
-    <div class="container-fluid">
-        <div class="Menú sticky-top">
-            <a class="estilo" href="/index.html"><b id="link">Inicio</b></a>
-            <a class="estilo" href="/Info/info.html"><b id="link">Qué es Comer en BA?</b></a>
-        </div>
-        <div class="Título">
-            <div id="título">Comer en BA</div>
-            <div id="texto-título">Porque comer rico hace bien al alma :)</div>
-        </div>
-        <div class="Contenido">
-        <div class="Desayuno"></div>
-        <div class="Almuerzo"></div>
-        <div class="Tarde"></div>
-        <div class="Noche"></div>
-        </div>
+    <div class="menu">
+        <a href="./index.html" id="textoMenu"><b>Inicio</b></a>
+        <a href="./Info/info.html" id="textoMenu"><b>Qué es Comer en BA?</b></a>
     </div>
-</body>
-</html>
-<!--
     <div class="container">
         <div id="paraTitulo">Comer en BA</div>
         <div><img src="./imagenes/Flecha - Título.png" alt="Flecha" width="20px" height="20px"></div>
@@ -42,8 +27,9 @@
     </div>
     <div class="border-top"></div>
     <div class="fotos">
-        <div class="foto"><img class="img" src="./imagenes/Comida.JPG" alt="Elegir dónde comer por el tipo de comida"><a href="./Comida/comida.html"><p class="textoFoto">ELEGÍ POR COMIDA</p></a></div>
-        <div class="foto"><img class="img" src="./imagenes/Barrio.JPG" alt="Elegir dónde comer por el barrio"><a href="./Barrio/barrio.html"><p class="textoFoto">ELEGÍ POR BARRIO</p></a></div>
-        <div class="foto"><img class="img" src="./imagenes/Hora.JPG" alt="Elegir dónde comer por la hora del día"><a href="./Hora/hora.html"><p class="textoFoto">ELEGÍ POR HORA DEL DÍA</p></a></div>
+        <div class="foto"><img class="img" src="./imagenes/Comida.JPG" alt="Elegir dónde comer por el tipo de comida"><a href="./Comida/comida.html"><p class="textoFoto" id="fondo1">ELEGÍ POR COMIDA</p></a></div>
+        <div class="foto"><img class="img" src="./imagenes/Barrio.JPG" alt="Elegir dónde comer por el barrio"><a href="./Barrio/barrio.html"><p class="textoFoto" id="fondo2">ELEGÍ POR BARRIO</p></a></div>
+        <div class="foto"><img class="img" src="./imagenes/Hora.JPG" alt="Elegir dónde comer por la hora del día"><a href="./Hora/hora.html"><p class="textoFoto" id="fondo3">ELEGÍ POR HORA DEL DÍA</p></a></div>
     </div>
--->
+</body>
+</html>
