--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <title>Comer en BA</title>
 </head>
 <body>
+<div class="contenido">
     <div class="menu">
         <a href="./index.html" id="textoMenu"><b>Inicio</b></a>
         <a href="./Info/info.html" id="textoMenu"><b>Qué es Comer en BA?</b></a>
@@ -27,9 +28,20 @@
     </div>
     <div class="border-top"></div>
     <div class="fotos">
-        <div class="foto"><img class="img" src="./imagenes/Comida.JPG" alt="Elegir dónde comer por el tipo de comida"><a href="./Comida/comida.html"><p class="textoFoto" id="fondo1">ELEGÍ POR COMIDA</p></a></div>
-        <div class="foto"><img class="img" src="./imagenes/Barrio.JPG" alt="Elegir dónde comer por el barrio"><a href="./Barrio/barrio.html"><p class="textoFoto" id="fondo2">ELEGÍ POR BARRIO</p></a></div>
-        <div class="foto"><img class="img" src="./imagenes/Hora.JPG" alt="Elegir dónde comer por la hora del día"><a href="./Hora/hora.html"><p class="textoFoto" id="fondo3">ELEGÍ POR HORA DEL DÍA</p></a></div>
+        <div class="foto">
+            <img id="img" src="./imagenes/Comida.JPG" alt="Elegir dónde comer por el tipo de comida">
+        </div>
+        <div class="foto">
+            <img id="img" src="./imagenes/Barrio.JPG" alt="Elegir dónde comer por el barrio">
+        </div>
+        <div class="foto">
+            <img id="img" src="./imagenes/Hora.JPG" alt="Elegir dónde comer por la hora del día">
     </div>
+    <div class="textoFoto">
+    <a href="./Comida/comida.html"><p id="formato1">ELEGÍ POR COMIDA</p></a>
+    <a href="./Barrio/barrio.html"><p id="formato2">ELEGÍ POR BARRIO</p></a>
+    <a href="./Hora/hora.html"><p id="formato3">ELEGÍ POR HORA DEL DÍA</p></a>
+    </div>
+</div>
 </body>
 </html>
