--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
     <title>Comer en BA</title>
 </head>
 <body>
-<div class="contenido">
     <div class="menu">
         <a href="./index.html" id="textoMenu"><b>Inicio</b></a>
         <a href="./Info/info.html" id="textoMenu"><b>Qué es Comer en BA?</b></a>
@@ -30,18 +29,15 @@
     <div class="fotos">
         <div class="foto">
             <img id="img" src="./imagenes/Comida.JPG" alt="Elegir dónde comer por el tipo de comida">
+            <div class="arriba"><a id="formato" href="./Comida/comida.html"><p style="background-color: #6D3826; padding: 5%;">ELEGÍ POR COMIDA</p></a></div>
         </div>
         <div class="foto">
             <img id="img" src="./imagenes/Barrio.JPG" alt="Elegir dónde comer por el barrio">
+            <div class="arriba"><a id="formato" href="./Barrio/barrio.html"><p style="background-color: #788143;; padding: 5%;">ELEGÍ POR BARRIO</p></a></div>
         </div>
         <div class="foto">
             <img id="img" src="./imagenes/Hora.JPG" alt="Elegir dónde comer por la hora del día">
+            <div class="arriba"><a id="formato" href="./Hora/hora.html"><p style="background-color: #B89663; padding: 5%;">ELEGÍ POR HORA DEL DÍA</p></a></div>
     </div>
-    <div class="textoFoto">
-    <a href="./Comida/comida.html"><p id="formato1">ELEGÍ POR COMIDA</p></a>
-    <a href="./Barrio/barrio.html"><p id="formato2">ELEGÍ POR BARRIO</p></a>
-    <a href="./Hora/hora.html"><p id="formato3">ELEGÍ POR HORA DEL DÍA</p></a>
-    </div>
-</div>
 </body>
 </html>
